--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 VUE_APP_NAME='Vue Netlify Multiple choice'
-VUE_APP_KEY=
 VUE_APP_MAINTEANCE=false
-VUE_APP_SPREADSHEET_URL=https://docs.google.com/spreadsheets/d/..../pubhtml
+VUE_APP_SPREADSHEET_URL=https://docs.google.com/spreadsheets/d/..../edit?usp=sharing
+
+VUE_APP_WEIGHT_CORRECT = 1
+VUE_APP_WEIGHT_INCORRECT = -0.5
+VUE_APP_WEIGHT_UNANSWERED = 0
