--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "lodash": "^4.17.15",
     "tabletop": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-cli-plugin-netlify-lambda": "^0.1.1",
     "vue-material-design-icons": "^4.4.0",
-    "vue-router": "^3.1.3",
-    "vue-cli-plugin-netlify-lambda": "^0.1.1"
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
