--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buefy": "^0.8.8",
     "core-js": "^3.4.3",
     "lodash": "^4.17.15",
+    "striptags": "^3.1.1",
     "tabletop": "^1.6.2",
     "vue": "^2.6.10",
     "vue-cli-plugin-netlify-lambda": "^0.1.1",
