Add img and support multiple sheets

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 VUE_APP_NAME='Vue Netlify Multiple choice'
 VUE_APP_SPREADSHEET_URL=https://docs.google.com/spreadsheets/d/..../edit?usp=sharing
+VUE_APP_SHEET_NAME=Questions
 
 VUE_APP_WEIGHT_CORRECT = 1
 VUE_APP_WEIGHT_INCORRECT = -0.5
